[EDP-DDM-0000] Bulk update 1.9.8